[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-tui"
version = "0.1.5"
description = "BTC live trade terminal with candlestick chart — streams Binance data in your terminal"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["bitcoin", "btc", "trading", "tui", "terminal", "candlestick", "binance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
]
dependencies = [
    "websockets>=12.0",
    "windows-curses>=2.3; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/bscript/btc-tui"
Repository = "https://github.com/bscript/btc-tui"
"Bug Tracker" = "https://github.com/bscript/btc-tui/issues"

[project.scripts]
btc-tui = "btc_tui.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["btc_tui*"]
